--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,16 @@
 appnope==0.1.2
 backcall==0.2.0
+blinker==1.4
+click==8.0.1
 decorator==5.0.7
+Flask==2.0.1
+Flask-DebugToolbar==0.11.0
 ipython==7.23.1
 ipython-genutils==0.2.0
+itsdangerous==2.0.1
 jedi==0.18.0
+Jinja2==3.0.1
+MarkupSafe==2.0.1
 matplotlib-inline==0.1.2
 parso==0.8.2
 pexpect==4.8.0
@@ -13,3 +20,4 @@ ptyprocess==0.7.0
 Pygments==2.9.0
 traitlets==5.0.5
 wcwidth==0.2.5
+Werkzeug==2.0.1
