--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ click==8.0.1
 decorator==5.0.7
 Flask==2.0.1
 Flask-DebugToolbar==0.11.0
+Flask-SQLAlchemy==2.5.1
+greenlet==1.1.0
 ipython==7.23.1
 ipython-genutils==0.2.0
 itsdangerous==2.0.1
@@ -16,8 +18,10 @@ parso==0.8.2
 pexpect==4.8.0
 pickleshare==0.7.5
 prompt-toolkit==3.0.18
+psycopg2-binary==2.9.1
 ptyprocess==0.7.0
 Pygments==2.9.0
+SQLAlchemy==1.4.18
 traitlets==5.0.5
 wcwidth==0.2.5
 Werkzeug==2.0.1
